// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GraphCardHelpers generateChartSettings should return base graph settings: basic filters 1`] = `
Object {
  "groupedFilters": Array [
    Object {
      "dolor": "sit",
      "id": "dolorSit",
      "isStacked": true,
      "isStandalone": false,
      "isThreshold": false,
      "strokeWidth": 2,
    },
  ],
  "standaloneFilters": Array [],
}
`;

exports[`GraphCardHelpers generateChartSettings should return base graph settings: no filters 1`] = `
Object {
  "groupedFilters": Array [],
  "standaloneFilters": Array [],
}
`;

exports[`GraphCardHelpers generateExtendedChartSettings should return extended graph settings: basic settings 1`] = `
Object {
  "lorem": "ipsum",
  "xAxisLabelIncrement": 5,
  "xAxisTickFormat": [Function],
  "yAxisTickFormat": [Function],
}
`;

exports[`GraphCardHelpers generateExtendedChartSettings should return extended graph settings: no settings 1`] = `
Object {
  "xAxisLabelIncrement": 1,
  "xAxisTickFormat": [Function],
  "yAxisTickFormat": [Function],
}
`;

exports[`GraphCardHelpers getChartXAxisLabelIncrement should return a x axis tick increment based on granularity: x axis tick increment 1`] = `
Object {
  "daily": 5,
  "monthly": 2,
  "quarterly": 1,
  "weekly": 2,
}
`;

exports[`GraphCardHelpers getTooltipDate should return a formatted date based on granularity: granularity based date 1`] = `
Object {
  "daily": "June 1",
  "monthly": "June 2019",
  "quarterly": "Jun 2019 - Sep 2019",
  "weekly": "Jun 1 - Jun 8 2019",
}
`;

exports[`GraphCardHelpers should have specific functions: graphCardHelpers 1`] = `
Object {
  "generateChartSettings": [Function],
  "generateExtendedChartSettings": [Function],
  "getChartXAxisLabelIncrement": [Function],
  "getTooltipDate": [Function],
  "xAxisTickFormat": [Function],
  "yAxisTickFormat": [Function],
}
`;

exports[`GraphCardHelpers xAxisTickFormat should produce consistent x axis tick values: x axis should be undefined if date or granularity are missing 1`] = `
Object {
  "missingDate": undefined,
  "missingGranularity": undefined,
}
`;

exports[`GraphCardHelpers xAxisTickFormat should produce consistent x axis tick values: x axis tick values 1`] = `
Object {
  "daily": Array [
    "Jun 20",
    "Jun 21",
    "Jun 22",
    "Jun 23",
    "Jun 24",
    "Jun 25",
    "Jun 26",
    "Jun 27",
    "Jun 28",
    "Jun 29",
    "Jun 30",
    "Jul 1",
    "Jul 2",
    "Jul 3",
    "Jul 4",
    "Jul 5",
    "Jul 6",
    "Jul 7",
    "Jul 8",
    "Jul 9",
    "Jul 10",
    "Jul 11",
    "Jul 12",
    "Jul 13",
    "Jul 14",
    "Jul 15",
    "Jul 16",
    "Jul 17",
    "Jul 18",
    "Jul 19",
    "Jul 20",
  ],
  "monthly": Array [
    "Jul",
    "Aug",
    "Sep",
    "Oct",
    "Nov",
    "Dec",
    "Jan
2019",
    "Feb",
    "Mar",
    "Apr",
    "May",
    "Jun",
    "Jul",
  ],
  "quarterly": Array [
    "Jul",
    "Oct",
    "Jan
2017",
    "Apr",
    "Jul",
    "Oct",
    "Jan
2018",
    "Apr",
    "Jul",
    "Oct",
    "Jan
2019",
    "Apr",
    "Jul",
  ],
  "weekly": Array [
    "Apr 21",
    "Apr 28",
    "May 5",
    "May 12",
    "May 19",
    "May 26",
    "Jun 2",
    "Jun 9",
    "Jun 16",
    "Jun 23",
    "Jun 30",
    "Jul 7",
    "Jul 14",
  ],
}
`;

exports[`GraphCardHelpers yAxisTickFormat should produce consistent y axis tick values: y axis tick values 1`] = `
Object {
  "1": "1",
  "10": "10",
  "100": "100",
  "1000": "1K",
  "10000": "10K",
  "100000": "100K",
  "1000000": "1M",
  "10000000": "10M",
  "100000000": "100M",
  "1000000000": "1B",
  "10000000000": "10B",
  "100000000000": "100B",
  "1000000000000": "1T",
  "10000000000000": "10T",
  "11": "11",
  "110": "110",
  "1100": "1.1K",
  "11000": "11K",
  "110000": "110K",
  "1100000": "1.1M",
  "11000000": "11M",
  "110000000": "110M",
  "1100000000": "1.1B",
  "11000000000": "11B",
  "110000000000": "110B",
  "1100000000000": "1.1T",
  "11000000000000": "11T",
  "12": "12",
  "120": "120",
  "1200": "1.2K",
  "12000": "12K",
  "120000": "120K",
  "1200000": "1.2M",
  "12000000": "12M",
  "120000000": "120M",
  "1200000000": "1.2B",
  "12000000000": "12B",
  "120000000000": "120B",
  "1200000000000": "1.2T",
  "12000000000000": "12T",
  "13": "13",
  "130": "130",
  "1300": "1.3K",
  "13000": "13K",
  "130000": "130K",
  "1300000": "1.3M",
  "13000000": "13M",
  "130000000": "130M",
  "1300000000": "1.3B",
  "13000000000": "13B",
  "130000000000": "130B",
  "1300000000000": "1.3T",
  "13000000000000": "13T",
  "14": "14",
  "140": "140",
  "1400": "1.4K",
  "14000": "14K",
  "140000": "140K",
  "1400000": "1.4M",
  "14000000": "14M",
  "140000000": "140M",
  "1400000000": "1.4B",
  "14000000000": "14B",
  "140000000000": "140B",
  "1400000000000": "1.4T",
  "14000000000000": "14T",
  "15": "15",
  "150": "150",
  "1500": "1.5K",
  "15000": "15K",
  "150000": "150K",
  "1500000": "1.5M",
  "15000000": "15M",
  "150000000": "150M",
  "1500000000": "1.5B",
  "15000000000": "15B",
  "150000000000": "150B",
  "1500000000000": "1.5T",
  "15000000000000": "15T",
  "2": "2",
  "20": "20",
  "200": "200",
  "2000": "2K",
  "20000": "20K",
  "200000": "200K",
  "2000000": "2M",
  "20000000": "20M",
  "200000000": "200M",
  "2000000000": "2B",
  "20000000000": "20B",
  "200000000000": "200B",
  "2000000000000": "2T",
  "3": "3",
  "30": "30",
  "300": "300",
  "3000": "3K",
  "30000": "30K",
  "300000": "300K",
  "3000000": "3M",
  "30000000": "30M",
  "300000000": "300M",
  "3000000000": "3B",
  "30000000000": "30B",
  "300000000000": "300B",
  "3000000000000": "3T",
  "4": "4",
  "40": "40",
  "400": "400",
  "4000": "4K",
  "40000": "40K",
  "400000": "400K",
  "4000000": "4M",
  "40000000": "40M",
  "400000000": "400M",
  "4000000000": "4B",
  "40000000000": "40B",
  "400000000000": "400B",
  "4000000000000": "4T",
  "5": "5",
  "50": "50",
  "500": "500",
  "5000": "5K",
  "50000": "50K",
  "500000": "500K",
  "5000000": "5M",
  "50000000": "50M",
  "500000000": "500M",
  "5000000000": "5B",
  "50000000000": "50B",
  "500000000000": "500B",
  "5000000000000": "5T",
  "6": "6",
  "60": "60",
  "600": "600",
  "6000": "6K",
  "60000": "60K",
  "600000": "600K",
  "6000000": "6M",
  "60000000": "60M",
  "600000000": "600M",
  "6000000000": "6B",
  "60000000000": "60B",
  "600000000000": "600B",
  "6000000000000": "6T",
  "7": "7",
  "70": "70",
  "700": "700",
  "7000": "7K",
  "70000": "70K",
  "700000": "700K",
  "7000000": "7M",
  "70000000": "70M",
  "700000000": "700M",
  "7000000000": "7B",
  "70000000000": "70B",
  "700000000000": "700B",
  "7000000000000": "7T",
  "8": "8",
  "80": "80",
  "800": "800",
  "8000": "8K",
  "80000": "80K",
  "800000": "800K",
  "8000000": "8M",
  "80000000": "80M",
  "800000000": "800M",
  "8000000000": "8B",
  "80000000000": "80B",
  "800000000000": "800B",
  "8000000000000": "8T",
  "9": "9",
  "90": "90",
  "900": "900",
  "9000": "9K",
  "90000": "90K",
  "900000": "900K",
  "9000000": "9M",
  "90000000": "90M",
  "900000000": "900M",
  "9000000000": "9B",
  "90000000000": "90B",
  "900000000000": "900B",
  "9000000000000": "9T",
}
`;
